--- a/galaxy.yml
+++ b/galaxy.yml
@@ -16,7 +16,7 @@ readme: README.md
 # @nicks:irc/im.site#channel'
 authors:
  - Conrad Mercer <conrad.mercer@capcu.org>
-
+ - David Villafaña <david.villafana@capcu.org>
 
 ### OPTIONAL but strongly recommended
 
