--- a/galaxy.yml
+++ b/galaxy.yml
@@ -7,7 +7,7 @@ namespace: dtvillafana
 name: fics
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 3.0.0
+version: 3.1.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -15,8 +15,8 @@ readme: README.md
 # A list of the collection's content authors. Can be just the name or in the format 'Full Name <email> (url)
 # @nicks:irc/im.site#channel'
 authors:
+ - Conrad Mercer <conrad.mercer@capcu.org>
  - David Villafaña <david.villafana@capcu.org>
-
 
 ### OPTIONAL but strongly recommended
 
